--- a/BulkyWeb/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -44,9 +44,9 @@
                 <span asp-validation-for="Input.City" class="text-danger"></span>
             </div>
               <div class="form-floating mb-3">
-                <input asp-for="Input.State" class="form-control" autocomplete="email" placeholder="Please enter your email."/>
-                <label asp-for="Input.State" class="form-label"></label>
-                <span asp-validation-for="Input.State" class="text-danger"></span>
+                <input asp-for="Input.Province" class="form-control" autocomplete="email" placeholder="Please enter your email."/>
+                <label asp-for="Input.Province" class="form-label"></label>
+                <span asp-validation-for="Input.Province" class="text-danger"></span>
             </div>
               <div class="form-floating mb-3">
                 <input asp-for="Input.PostalAddress" class="form-control" autocomplete="email" placeholder="Please enter your email."/>
