--- a/BulkyWeb/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -18,11 +18,11 @@
                     <td>
                         @if (Model.ShowRemoveButton)
                         {
-                            <form id="@($"remove-login-{login.LoginProvider}")" asp-page-handler="RemoveLogin" method="post">
+                            <form id="@($"remove-login-{login.LoginProvider}")" asp-page-handler="DeleteLogin" method="post">
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                    <button type="submit" class="btn btn-primary" title="Delete this @login.ProviderDisplayName login from your account">Delete</button>
                                 </div>
                             </form>
                         }
