--- a/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -62,7 +62,7 @@
                 <span asp-validation-for="Input.City" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3 col-md-6">
-                <input asp-for="Input.Province" class="form-control" placeholder="Province" />
+                <input asp-for="Input.Province" class="form-control" placeholder="State" />
                 <label asp-for="Input.Province" class="ms-2 text-muted">State</label>
                 <span asp-validation-for="Input.Province" class="text-danger"></span>
             </div>
