--- a/BookStoreWeb/Views/Shared/_Layout.cshtml
+++ b/BookStoreWeb/Views/Shared/_Layout.cshtml
@@ -15,7 +15,6 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="//cdn.datatables.net/2.0.7/css/dataTables.dataTables.min.css"/>
-
 </head>
 
 <body>
@@ -99,9 +98,8 @@
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="//cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
-//TODO: Investigate why this script is not working
-@* <script src="https://cdn.tiny.cloud/1/bqeay29f3t7fgdxko98c76wei0rdwberkcqbq9fu0429d34t/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
+
+<script src="https://cdn.tiny.cloud/1/sq1pwb3vo62uydquojbrhde2lw15w5465tt7ojq2a8o5d38n/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
