--- a/BookStoreWeb/Views/Shared/_Layout.cshtml
+++ b/BookStoreWeb/Views/Shared/_Layout.cshtml
@@ -97,11 +97,11 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="//cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
-
 <script src="https://cdn.tiny.cloud/1/sq1pwb3vo62uydquojbrhde2lw15w5465tt7ojq2a8o5d38n/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="//cdn.datatables.net/2.0.7/js/dataTables.min.js" asp-append-version="true"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 
